Tweak style for spacing issues

--- a/src/styles/nlab-theme.scss
+++ b/src/styles/nlab-theme.scss
@@ -21,9 +21,10 @@ body {
     font-family: $nlab-body-font;
     font-size: 1em;
     color: $nlab-body-color;
-}
-div.grid-container {
 
+    span {
+        margin-left: 4px;
+    }
 }
 a {
     color: $nlab-green;
